--- a/.gitignore
+++ b/.gitignore
@@ -1,154 +1,156 @@
-'use client';
+import {
+    connectToFeeMgmtDb,
+    executeStoreProcedure
+  } from '#core/data/mssql/index.js'
+  
+  export async function saveFeePackageBranch(_branchCd, 
+                                             _officerid,
+                                             _feegroupid,
+                                             _busfeegroupid, 
+                                             _indfeegroupid, 
+                                             _updatedby){
 
-import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/Tabs';
-import { IData } from '@/store/types';
-import { useState } from 'react';
-import FormFactory from './FormFactory';
-import { Email } from "@snb/ds-email";
-import Buttons from './Buttons';
-import { FormProvider, useForm } from 'react-hook-form';
-import { tranformBackEntriesOnValues } from '@/utils';
-import { ProgressAlert } from '@snb/ds-progress-alert';
-import { DataDisplay } from "@snb/ds-data-display";
-import { RadioButton } from "@snb/ds-radio-button"
+   let _result = false
+  
+   try {
+
+    const connectionBranch = await connectToFeeMgmtDb()
+    _result = await executeStoreProcedure(connectionBranch, 'sp_upd_feepackagebranch', { branch_cd:_branchCd, 
+                                                                                        feegroupid: _feegroupid,
+                                                                                        busfeegroupid: _busfeegroupid,
+                                                                                        indfeegroupid : _indfeegroupid,
+                                                                                        updatedby: _updatedby })
 
 
-const ForeignCurrenciesTab = (data: IData, useFormObject: any) => {
-  if (!data?.contingencyData?.id || !data?.contingencyData?.status || !data?.contingencyData?.dateAndTime || !data.requestId) return;
+    const connectionOfficer = await connectToFeeMgmtDb()
+    _result = await executeStoreProcedure(connectionOfficer, 'sp_upd_feegroupofficer', { officerid: _officerid, 
+                                                                                  feegroupid: _feegroupid,
+                                                                                  busfeegroupid: _busfeegroupid,
+                                                                                  indfeegroupid : _indfeegroupid,
+                                                                                  updatedby: _updatedby })
 
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      <FormProvider {...useFormObject}>
-        <div className="grid grid-cols-2 gap-8 p-6">
-          <div>
-            <DataDisplay 
-              title='Process Integration: Bank of America'
-              data={[{
-                Id: "320923457#-983242|239",
-                Status: "processed",
-                Date: "2025-11-01T11:49:30.2098749-05:00"
-              }]}
-            />
-          </div>
+    _result = true;
+  } catch (error) {
+    _result = false; 
+   } 
 
-          <div>
-            <Email senderName={""}
-              subjectName={""}
-              attachments={[]}
-              message={""}></Email>
-          </div>
-        </div>
-
-        <Buttons requestId={data.requestId} initialRequestData={data} data={data.buttons} />
-      </FormProvider>
-    </TabsContent>
-  )
-};
-
-const DomesticInternacionalTab = (data: IData, useFormObject: any) => {
-  const [selectedBank, setSelectedBank] = useState('');
-
-  const handleBankSelection = (bank: string) => {
-    setSelectedBank(bank);
-  };
-
-  if (!data.requestId) {
-    return;
+    return _result;
+                                             
   }
 
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      <FormProvider {...useFormObject}>
-        <div className="grid grid-cols-2 gap-8 p-6">
-          <div>
-            <ProgressAlert 
-            
-              isLayoutInLine={true}
-              cardColor='Yellow'
-              children= '<p>This Wire Transfer is in cutoff time, it might not be processed today</p>'
-              height='56px'
-              cardIcon= 'WarningCircle'
-            
-            />
-            <h1 className='my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter' style={{ color: 'var(--text-[#484A55], #484A55)' }}>
-              Select Bank
-            </h1>
 
-            <div className="flex flex-grow gap-4">
-              <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'> 
-                <RadioButton onChange={() => handleBankSelection('payplus')}>
-                  <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">Payplus</label>
-                </RadioButton>
-                <div className='bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>Default</div>
-              </div>
+  export async function getFeePackageBranch(branchCd){
+  
+    const connection = await connectToFeeMgmtDb()
 
-              <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-                <RadioButton onChange={() => handleBankSelection('bank-of-america')}>
-                  <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">Bank of America</label>
-                </RadioButton>
-                <div className='bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>Contingency</div>
-              </div>
-            </div>
+    const recordset = null;
 
-            <div className='mt-10'>
-              <DataDisplay 
-                title='Process Integration: Bank of America'
-                data={[{
-                  Id: "320923457#-983242|239",
-                  Status: "processed",
-                  Date: "2025-11-01T11:49:30.2098749-05:00"
-                }]}
-              />
-            </div>
-          </div>
-          <div>
-            <Email senderName={""}
-              subjectName={""}
-              attachments={[]}
-              message={""}></Email>
-          </div>
-        </div>
-
-        <Buttons requestId={data.requestId} initialRequestData={data} data={data.buttons} />
-      </FormProvider>
-    </TabsContent>
-  )
-};
-
-export default function TabsFactory({ data }: { data: IData }) {
-  if (!data) {
-    return;
-  }
-  const transferType = data.backEntries['transfer-type'].value;
-  const useFormObject = useForm({
-    defaultValues: tranformBackEntriesOnValues(data.backEntries),
-  });
-
-  const TranferTypeTabs = {
-    'usd-domestic': DomesticInternacionalTab(data, useFormObject),
-    'usd-internacional': DomesticInternacionalTab(data, useFormObject),
-    'foreign-currencies': ForeignCurrenciesTab(data, useFormObject),
+    if(branchCd === null || branchCd === undefined || branchCd <=0){
+      recordset = await executeStoreProcedure(connection, 'sp_get_branch_feepackage_info')
+    }else{
+      recordset = await executeStoreProcedure(connection, 'sp_get_branch_feepackage_info', { branch_code: branchCd })
+    }
+  
+      return result;
   }
 
-  const [selectedTab, setSelectedTab] = useState('wire-transfer-form');
+  export async function getAllPackageBranchsIndividual(id) {
+    const connection = await connectToFeeMgmtDb()
+    const recordset = await executeStoreProcedure(connection, 'sp_get_branch_feepackage_info', {})
+  
+    const listBranchs = recordset.map(record => {
+      const branchId = record.Branch_Id
+      const city = record.City
+      const state = record.State
+      const director = record.Director
+      const branchType = record.Branch_Type
+      const currentBusinessPackage = {
+        id: record.Business_PackageID,
+        name: record.Business_Package
+      }
+      const currentIndividualPackage = {
+        id: record.Individual_PackageID,
+        name: record.Individual_Package
+      }
+  
+      return {
+        branchId,
+        city,
+        state,
+        director,
+        branchType,
+        currentBusinessPackage,
+        currentIndividualPackage
+      }
+    })
+  
+    const result = listBranchs.filter((x) => x.currentIndividualPackage.id === id)
+    
+    //return listBranchs
+    return result
+  }
 
-  return (
-    <Tabs className="min-h-screen w-full p-6">
-      <TabsList className='m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start'>
-        <TabsTrigger value="wire-transfer-form" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('wire-transfer-form')}>
-          Wire Transfer Form
-        </TabsTrigger>
 
-        <TabsTrigger value="processing-bank-of-america" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('processing-bank-of-america')}>
-          {transferType === 'usd-domestic' || transferType === 'usd-internacional' ? 'Processing' : 'Processing: Bank of America'}
-        </TabsTrigger>
-      </TabsList>
 
-      <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
-        <FormFactory data={data} />
-      </TabsContent>
 
-      {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
-    </Tabs>
-  );
-}
+PROCEDURE  sp_upd_feepackagebranch
+
+
+
+USE [FeeMgmt]
+GO
+/****** Object:  StoredProcedure [dbo].[sp_upd_feepackagebranch]    Script Date: 3/6/2025 2:44:42 PM ******/
+SET ANSI_NULLS ON
+GO
+SET QUOTED_IDENTIFIER ON
+GO
+
+
+
+
+
+ALTER PROCEDURE [dbo].[sp_upd_feepackagebranch]
+@branch_cd int,
+@feegroupid int,
+@busfeegroupid int,
+@indfeegroupid int,
+@updatedby varchar(50) = NULL
+
+AS
+
+BEGIN
+   
+   /*
+   DECLARE
+   @current_busfeepackageid int,
+   @current_indfeepackageid int
+   */
+
+   IF EXISTS (select 1 from FeePackageBranch where branch_cd=@branch_cd)
+      BEGIN
+	    -- SELECT @current_busfeepackageid=BusFeePackageID,@current_indfeepackageid=IndFeePackageID FROM FeePackageBranch WHERE Branch_CD=@branch_cd
+		-- UPDATE FeePackageBranch set BusFeePackageID=ISNULL(@busfeepackageid,@current_busfeepackageid),IndFeePackageID=ISNULL(@indfeepackageid,@current_indfeepackageid),UpdatedBy=@updatedby,UpdateDt=getdate() where Branch_CD=@branch_cd
+       
+	    UPDATE FeePackageBranch set FeeGroupId=@feegroupid,BusFeeGroupId=@busfeegroupid,IndFeeGroupID=@indfeegroupid,UpdatedBy=@updatedby,UpdateDt=getdate() where Branch_CD=@branch_cd
+		INSERT INTO FeePackageBranchHistory(Branch_CD,FeeGroupId,BusFeeGroupID,IndFeeGroupID,Active,UpdateDt,UpdatedBy,Action) VALUES (@branch_cd,@feegroupid,@busfeegroupid,@indfeegroupid,1,getdate(),@updatedby,'U')
+	  END
+   ELSE
+      BEGIN
+	     INSERT INTO FeePackageBranch(Branch_CD,FeeGroupId,BusFeeGroupID,IndFeeGroupID,Active,CreateDt,UpdateDt,UpdatedBy) VALUES (@branch_cd,@feegroupid,@busfeegroupid,@indfeegroupid,1,getdate(),getdate(),@updatedby)
+		
+         INSERT INTO FeePackageBranchHistory(Branch_CD,FeeGroupId,BusFeeGroupID,IndFeeGroupID,Active,UpdateDt,UpdatedBy,Action) VALUES (@branch_cd,@feegroupid,@busfeegroupid,@indfeegroupid,1,getdate(),@updatedby,'I')
+      END
+
+END
+
+
+
+
+
+
+
+
+
+
+
+
