--- a/.gitignore
+++ b/.gitignore
@@ -1,152 +1,128 @@
 'use client';
 
+import dynamic from 'next/dynamic';
+
+import Loading from '@/components/Loading';
+import { SkeletonForm } from '@/components/SkeletonForm';
 import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/Tabs';
-import { IData } from '@/store/types';
-import { useState } from 'react';
-import FormFactory from './FormFactory';
-import { Email } from "@snb/ds-email";
-import Buttons from './Buttons';
-import { FormProvider, useForm } from 'react-hook-form';
-import { tranformBackEntriesOnValues } from '@/utils';
-import { ProgressAlert } from '@snb/ds-progress-alert';
-import { DataDisplay } from "@snb/ds-data-display";
-import { RadioButton } from "@snb/ds-radio-button"
+import { useAuthStore } from '@/store/auth/store';
+import { useDocumentStore } from '@/store/documentsStore';
+import { Documents } from '@snb/ds-documents';
+import { History } from '@snb/ds-history';
 
+import TabsFactory from '@/components/TabsFactory';
+import RequestConfigProvider from '@/providers/requestConfigProvider';
+import { Document } from '@/store/types';
 
-const ForeignCurrenciesTab = (data: IData, useFormObject: any) => {
-  if (!data?.contingencyData?.id || !data?.contingencyData?.status || !data?.contingencyData?.dateAndTime || !data.requestId) return;
+const FormFactory = dynamic(() => import('@/components/FormFactory'), {
+  loading: () => <SkeletonForm />,
+});
 
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      <FormProvider {...useFormObject}>
-        <div className="grid grid-cols-2 gap-8 p-6">
-          <div>
-            <DataDisplay
-              title='Process Integration: Bank of America'
-              data={[{
-                Id: "320923457#-983242|239",
-                Status: "processed",
-                Date: "2025-11-01T11:49:30.2098749-05:00"
-              }]}
-            />
-          </div>
-
-          <div>
-            <Email senderName={""}
-              subjectName={""}
-              attachments={[]}
-              message={""}></Email>
-          </div>
-        </div>
-
-        <Buttons requestId={data.requestId} initialRequestData={data} data={data.buttons} />
-      </FormProvider>
-    </TabsContent>
-  )
+type IPageTabsParams = {
+  params: {
+    requestName: string;
+    requestId: string;
+  };
+  tabTriggerType: string;
 };
 
-const DomesticInternacionalTab = (data: IData, useFormObject: any) => {
-  const [selectedBank, setSelectedBank] = useState('');
+export default function PageTabs({ params, tabTriggerType }: IPageTabsParams) {
+  const { getRequestConfig } = RequestConfigProvider(params.requestId);
 
-  const handleBankSelection = (bank: string) => {
-    setSelectedBank(bank);
-  };
+  const { userData } = useAuthStore((state) => state);
 
-  if (!data.requestId) {
-    return;
+  const { setDocumentList } = useDocumentStore((state) => state);
+
+  const { isLoading, isFetching, data } = getRequestConfig;
+
+  const mapPayPlus = data?.timeline?.flat().filter((item: any) => item.name === "Processing")
+  const isContingencyStep = mapPayPlus?.[0].status == "pending" ? true : false;
+  //Setar false caso subir outra versão do wire deprtament sem contigencia.
+
+
+  if (isLoading || isFetching) {
+    return (
+      <Loading />
+    )
   }
 
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      <FormProvider {...useFormObject}>
-        <div className="grid grid-cols-2 gap-8 p-6">
-          <div>
-            {data.messageCutoffTime && <ProgressAlert
-              isLayoutInLine={true}
-              cardColor='Yellow'
-              height='56px'
-              cardIcon='WarningCircle'
-            >{data.messageCutoffTime}</ProgressAlert>}
-            <h1 className='my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter' style={{ color: 'var(--text-[#484A55], #484A55)' }}>
-              Select Bank
-            </h1>
-
-            <div className="flex flex-grow gap-4">
-              <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-                <RadioButton name="bank" onChange={() => handleBankSelection('payplus')}>
-                  <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">Payplus</label>
-                </RadioButton>
-                <div className='bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>Default</div>
-              </div>
-
-              <div className='flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow'>
-                <RadioButton name="bank" onChange={() => handleBankSelection('bank-of-america')}>
-                  <label className="text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">Bank of America</label>
-                </RadioButton>
-                <div className='bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full'>Contingency</div>
-              </div>
-            </div>
-
-            <div className='mt-10'>
-              {data.processIntegration && data.processIntegration.length > 0 && <DataDisplay
-                title='Process Integration: Bank of America'
-                data={[{
-                  Id: "320923457#-983242|239",
-                  Status: "processed",
-                  Date: "2025-11-01T11:49:30.2098749-05:00"
-                }]}
-              />}
-            </div>
-          </div>
-          <div>
-            <Email senderName={""}
-              subjectName={""}
-              attachments={[]}
-              message={""}></Email>
-          </div>
-        </div>
-
-        <Buttons requestId={data.requestId} initialRequestData={data} data={data.buttons} />
-      </FormProvider>
-    </TabsContent>
-  )
-};
-
-export default function TabsFactory({ data }: { data: IData }) {
-  const [selectedTab, setSelectedTab] = useState('wire-transfer-form');
-  const useFormObject = useForm({
-    defaultValues: tranformBackEntriesOnValues(data.backEntries),
-  });
   if (!data) {
     return;
   }
-  const transferType = data.backEntries['transfer-type'].value;
-
-
-  const TranferTypeTabs = {
-    'usd-domestic': DomesticInternacionalTab(data, useFormObject),
-    'usd-internacional': DomesticInternacionalTab(data, useFormObject),
-    'foreign-currencies': ForeignCurrenciesTab(data, useFormObject),
-  }
-
 
   return (
-    <Tabs className="min-h-screen w-full p-6">
-      <TabsList className='m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start'>
-        <TabsTrigger value="wire-transfer-form" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('wire-transfer-form')}>
-          Wire Transfer Form
+    <Tabs defaultValue={tabTriggerType} className="min-h-screen w-full p-6">
+      <TabsList className="m-0 p-0 list-none self-start ">
+        <TabsTrigger
+          value="request"
+          className='mb-[4px] font-figtree select-none flex flex-row justify-center items-center gap-4 h-[45px] bg-background-primary -order-none grow-0 font-normal text-sm cursor-pointer aria-selected:bg-white aria-selected:border-b-1 aria-selected:border-b-white text-[#636574] aria-selected:text-[#1e2347]'
+          style={{
+            padding: '10px 16px',
+            borderRadius: '8px 8px 0px 0px',
+          }}
+        >
+          Request: {data.caseNumber}
         </TabsTrigger>
-
-        <TabsTrigger value="processing-bank-of-america" className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''}`} style={{ color: 'var(--text-light-text-secondary, #636574)' }} onClick={() => setSelectedTab('processing-bank-of-america')}>
-          {transferType === 'usd-domestic' || transferType === 'usd-internacional' ? 'Processing' : 'Processing: Bank of America'}
+        <TabsTrigger
+          value="documents"
+          className='mb-[4px] font-figtree select-none flex flex-row justify-center items-center gap-4 h-[45px] bg-background-primary -order-none grow-0 font-normal text-sm cursor-pointer aria-selected:bg-white aria-selected:border-b-1 aria-selected:border-b-white text-[#636574] aria-selected:text-[#1e2347]'
+          style={{
+            padding: '10px 16px',
+            borderRadius: '8px 8px 0px 0px',
+          }}
+        >
+          Documents
+        </TabsTrigger>
+        <TabsTrigger
+          value="history"
+          className='mb-[4px] font-figtree select-none flex flex-row justify-center items-center gap-4 h-[45px] bg-background-primary -order-none grow-0 font-normal text-sm cursor-pointer aria-selected:bg-white aria-selected:border-b-1 aria-selected:border-b-white text-[#636574] aria-selected:text-[#1e2347]'
+          style={{
+            padding: '10px 16px',
+            borderRadius: '8px 8px 0px 0px',
+          }}
+        >
+          History
         </TabsTrigger>
       </TabsList>
 
-      <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
-        <FormFactory data={data} />
+      <TabsContent
+        forceMount={true}
+        value="request"
+        className="data-[state=inactive]:hidden mt-0 rounded-b-lg rounded-r-lg bg-background-secondary aria-selected:block"
+      >
+        {isContingencyStep ? (
+          <TabsFactory data={data} />
+        ) : (
+          <FormFactory data={data} />
+        )}
       </TabsContent>
 
-      {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
+      <TabsContent
+        value="documents"
+        className="mt-0 rounded-b-lg rounded-r-lg bg-background-secondary aria-selected:block rounded-lg p-6"
+      >
+        <Documents
+          baseUrl={process.env.NEXT_PUBLIC_BASE_URL ?? ''}
+          bucketName="conductor-wire-temp"
+          pathUrl="/v1/file"
+          getListDocument={data.documents ?? []}
+          showUploader={data.buttons?.length > 0}
+          userData={userData}
+          onUploadDocuments={(documents: Document[]) => setDocumentList(documents)}
+        />
+      </TabsContent>
+
+      <TabsContent
+        value="history"
+        className="mt-0 rounded-b-lg rounded-r-lg bg-background-secondary aria-selected:block"
+      >
+        <History
+          status={data?.caseStatus ?? ''}
+          data={data?.workflow ?? []}
+          cardRowData={data?.workflowApprovers}
+          dataDisplayData={data?.processIntegration}
+        />
+      </TabsContent>
     </Tabs>
   );
 }
