--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
-JSX element type 'RadioButton' does not have any construct or call signatures.ts(2604)
-'RadioButton' cannot be used as a JSX component.
-  Its type 'typeof import("//safra-pdc/sys/USERS/DanielG/workspace/wire-frontend/node_modules/@snb/ds-radio-button/dist/index")' is not a valid JSX element type.ts(2786)
-import RadioButton
+{
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/app/*"]
+    }
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "index.tjs"
+  ],
+  "exclude": ["node_modules"]
+}
